package ar.edu.utn.frba.dds.garbarisi.garbarisi.models.entities.productos;

public interface TipoProducto {
    Double impuestosAplicados(Double precioBase);
}